--- a/scss/index/_topbar.scss
+++ b/scss/index/_topbar.scss
@@ -22,8 +22,7 @@
 }
 .button-lang {
   display: inline-block;
-  width: 29px;
-  height: 24px;
+  padding: 5px;
 
   font-size: 12px;
   font-weight: 700;
