--- a/scss/components/_header-mobile.scss
+++ b/scss/components/_header-mobile.scss
@@ -1,3 +1,6 @@
+.menu-opened {
+  overflow: scroll;
+}
 .mobile {
   padding-top: 22px;
   @media screen and (min-width: 768px) {
@@ -10,87 +13,78 @@
   justify-content: space-between;
   align-items: center;
 }
-
 .menu-button {
-  position: relative;
-  z-index: 10;
+  height: 32px;
+  width: 32px;
   display: flex;
   justify-content: center;
   align-items: center;
-
-  height: 32px;
-  width: 32px;
-  margin: 0;
+  border: 0;
   padding: 0;
-
-  border: none;
   background-color: transparent;
+  cursor: pointer;
+
   &:hover,
   &:focus {
     background-color: $bg-alt;
     border-radius: 12px;
+  }
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
+.menu-button-open {
+  &:hover,
+  &:focus {
     .icon-menu {
       fill: $main;
     }
   }
-  &.is-open {
-    position: absolute;
-    right: 23px;
-    bottom: 304px;
-  }
-
-  &.is-open .menu-button__icon .icon-close {
-    opacity: 1;
-
-    fill: $icon-close;
-  }
-  &.is-open .menu-button__icon .icon-menu {
-    opacity: 0;
-  }
-}
-.icon-close {
-  opacity: 0;
 }
 .menu-button__icon {
   .icon-menu {
-    opacity: 1;
     fill: $white;
   }
 }
 .mobile-nav {
-  opacity: 0;
+  display: none;
   position: fixed;
+
   z-index: 3;
-  top: 0;
+  bottom: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   background: rgb(50, 50, 100, 0.7);
-  transform: translateY(100%);
-  transition: transform $transition-basic;
+}
 
-  &.is-open {
-    opacity: 1;
-    transform: translateX(0);
-  }
-  .mobile-list {
-    position: absolute;
-    z-index: 4;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 348px;
-    overflow-x: scroll;
-    background-color: $white;
-    border-radius: 12px 12px 0px 0px;
+.mobile-list {
+  position: absolute;
+  z-index: 4;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 348px;
+  overflow-x: scroll;
+  background-color: $white;
+  border-radius: 12px 12px 0px 0px;
 
-    @extend %list;
-    padding-top: 63px;
-    padding-left: 20px;
-    padding-right: 20px;
-    display: flex;
-    flex-direction: column;
-  }
+  @extend %list;
+  padding-top: 63px;
+  padding-left: 20px;
+  padding-right: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.mobile-item-button {
+  display: inline-block;
+}
+.mobile-menu-button {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  z-index: 10;
+  fill: $icon-close;
 }
 .mobile-item {
   display: inline-block;
@@ -108,7 +102,7 @@
   }
 }
 .mobile-links {
-  display: inline-block;
+  display: block;
   @extend %links;
   padding: 8px 0;
   font-weight: bold;
@@ -116,4 +110,8 @@
   line-height: 1.16;
 
   color: $button-regular;
+  &:hover,
+  &:focus {
+    color: $accent;
+  }
 }
