--- a/scss/about-us/_header.scss
+++ b/scss/about-us/_header.scss
@@ -1,3 +1,15 @@
+.about-us {
+  margin-bottom: 20px;
+  @media screen and(min-width:768px) {
+    margin-bottom: 40px;
+  }
+  @media screen and(min-width:1024px) {
+    margin-bottom: 60px;
+  }
+  @media screen and(min-width:1440px) {
+    margin-bottom: 88px;
+  }
+}
 .icon-menu-about {
   fill: $main;
 }
