--- a/scss/main.scss
+++ b/scss/main.scss
@@ -46,3 +46,7 @@
 // page about us
 @import "./about-us/header";
 @import "./about-us/advantages";
+@import "./about-us/achievments";
+// page service
+@import "./service/header-service";
+@import "./service/services-pages";
