--- a/scss/about-us/_advantages.scss
+++ b/scss/about-us/_advantages.scss
@@ -55,3 +55,49 @@
   fill: $accent;
   margin-right: 6px;
 }
+.title-advantages-bgimg {
+  margin-bottom: 20px;
+
+  background-image: url(../../img/about-us-320.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 40px;
+    background-image: url(../../img/about-us-768.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  @media screen and (min-width: 1024px) {
+    margin-bottom: 80px;
+    background-image: url(../../img/about-us-1024.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
+.title-advantages {
+  padding: 124px 10px;
+  font-size: 36px;
+  line-height: 1.16;
+
+  text-align: center;
+  letter-spacing: 10px;
+  text-transform: uppercase;
+  color: $white;
+
+  opacity: 0.8;
+  text-shadow: 0px 15px 30px rgba(40, 40, 86, 0.8);
+  @media screen and (min-width: 375px) {
+    letter-spacing: 20px;
+  }
+  @media screen and (min-width: 768px) {
+    padding: 143px 30px;
+    font-size: 50px;
+  }
+  @media screen and (min-width: 1024px) {
+    padding: 163px 30px;
+    font-size: 96px;
+    line-height: 1.17;
+    letter-spacing: 63px;
+  }
+}
