--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,4 +1,6 @@
 .footer {
+  margin: 0 auto;
+  max-width: 1440px;
   background-color: $bg;
   text-align: center;
   transition: background-color $transition-basic;
@@ -22,19 +24,31 @@
   background-color: $separator;
 }
 .footer-content {
-  margin-top: 20px;
-
+  margin: 20px 0 0 0;
+  padding: 0;
   @media screen and (min-width: 767px) {
-    margin-top: 29px;
+    margin: 29px 0 0 0;
   }
   @media screen and (min-width: 1024px) {
-    margin-top: 30px;
+    margin: 30px 0 0 0;
     display: flex;
 
     justify-content: space-between;
   }
 }
+.footer-contact-service {
+  padding: 20px 0 0 0;
+  margin: 0;
+  @media screen and (min-width: 767px) {
+    padding: 29px 0 0 0;
+  }
+  @media screen and (min-width: 1024px) {
+    padding: 30px 0 0 0;
+    display: flex;
 
+    justify-content: space-between;
+  }
+}
 .footer-contact-addrs {
   display: flex;
   flex-direction: column;
@@ -70,22 +84,21 @@
 
   @media screen and (min-width: 768px) {
     margin-right: 26px;
-  }
+    &::after {
+      position: absolute;
+      display: inline-block;
+      content: "";
+      top: 50%;
 
-  &::after {
-    position: absolute;
-    display: inline-block;
-    content: "";
-    top: 50%;
-
-    width: 6px;
-    height: 6px;
-    transform: translateY(-50%);
-    background-color: $text;
-    border-radius: 50%;
-  }
-  &::after {
-    right: -14px;
+      width: 6px;
+      height: 6px;
+      transform: translateY(-50%);
+      background-color: $text;
+      border-radius: 50%;
+    }
+    &::after {
+      right: -14px;
+    }
   }
 }
 
@@ -150,26 +163,26 @@
   }
   @media screen and (min-width: 768px) {
     margin-right: 27px;
-  }
-  &::after,
-  &::before {
-    position: absolute;
-    display: inline-block;
-    content: "";
-    top: 50%;
+    &::after,
+    &::before {
+      position: absolute;
+      display: inline-block;
+      content: "";
+      top: 50%;
 
-    width: 6px;
-    height: 6px;
-    transform: translateY(-50%);
-    background-color: $text;
-    border-radius: 50%;
-  }
+      width: 6px;
+      height: 6px;
+      transform: translateY(-50%);
+      background-color: $text;
+      border-radius: 50%;
+    }
 
-  &::after {
-    right: -14px;
-  }
-  &::before {
-    left: -10px;
+    &::after {
+      right: -14px;
+    }
+    &::before {
+      left: -10px;
+    }
   }
 }
 .footer-mail {
