--- a/scss/index/_cases.scss
+++ b/scss/index/_cases.scss
@@ -1,8 +1,20 @@
 .cases {
+  margin: 0 auto;
+  max-width: 1440px;
   background-color: $bg;
   margin-bottom: 30px;
 
   border-radius: 12px 0px 12px 12px;
+}
+.cases-container {
+  margin: 0 20px 30px 20px;
+  max-width: 1440px;
+  @media screen and (min-width: 768px) {
+    margin: 0 40px 30px 40px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin: 0 60px 30px 60px;
+  }
 }
 .cases:focus .cases:hover {
   background-color: $bg-alt;
