--- a/scss/about-us/_header.scss
+++ b/scss/about-us/_header.scss
@@ -52,6 +52,7 @@
 .header-address-page {
   color: $text;
 }
+
 .current-lang {
   color: $white;
 }
@@ -91,7 +92,10 @@
     color: $accent;
   }
 }
-
+.current {
+  color: $accent;
+  border-bottom: solid 2px $accent;
+}
 .top-navigation-page {
   justify-content: center;
   @media screen and (min-width: 1024px) {
