--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ img {
   height: auto;
 }
 
-.links, .team-link, .services-name, .services-link, .nav-menu-links, .header-icon_links, .telephone-desctop, .telephone, .mobile-links {
+.contact-text, .person-contacts, .team-item-link, .links, .team-link, .services-name, .services-link, .nav-menu-links, .header-icon_links, .telephone-desctop, .telephone, .mobile-links {
   text-decoration: none;
 }
 
@@ -44,7 +44,7 @@ h6 {
   margin: 0;
 }
 
-.owl-carousel, .advantages-list, .nav-menu-list-page, .card-list-grid, .clients-list, .cases-list, .services-list, .nav-menu-list, .language, .mobile-list {
+.person-contact, .team-list, .owl-carousel, .advantages-list, .nav-menu-list-page, .card-list-grid, .clients-list, .cases-list, .services-list, .nav-menu-list, .language, .mobile-list {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -66,7 +66,24 @@ h6 {
   }
 }
 
+.main-container {
+  padding: 0 20px;
+  margin: 0 auto;
+  max-width: 1094px;
+}
+@media screen and (min-width: 768px) {
+  .main-container {
+    padding: 0 40px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .main-container {
+    padding: 0 60px;
+  }
+}
+
 .title {
+  font-weight: 700;
   font-size: 32px;
   line-height: 1.18;
   background: linear-gradient(90.13deg, #f0145a 0.84%, #ef8080 99.96%);
@@ -101,11 +118,6 @@ h6 {
 
 .current-service {
   border-bottom: solid 2px #ffffff;
-}
-
-.current {
-  color: #f0145a;
-  border-bottom: solid 2px #f0145a;
 }
 
 .button {
@@ -498,6 +510,126 @@ h6 {
 
 .switcher-item-active:hover {
   opacity: 1;
+}
+
+.backdrop {
+  position: fixed;
+  z-index: 5;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #686887;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.modal {
+  overflow: scroll;
+  background-color: #f5f5fa;
+  padding: 20px;
+}
+@media screen and (max-width: 767px) {
+  .modal {
+    height: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 527px;
+    transform: translate(-50%, -50%);
+    box-shadow: 0px 15px 80px rgba(40, 40, 86, 0.5);
+    border-radius: 12px;
+  }
+}
+
+.form-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.modal-title {
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 1.18;
+  color: #f0145a;
+}
+@media screen and (min-width: 768px) {
+  .modal-title {
+    font-size: 32px;
+    line-height: 1.18;
+    background: linear-gradient(121.42deg, #f0145a 30.65%, #693264 107.33%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+  }
+}
+
+.menu-button__close {
+  fill: #ec6f5d;
+}
+
+.input {
+  margin-bottom: 20px;
+  display: inline-block;
+  width: 100%;
+  padding: 11px;
+  background: #ffffff;
+  border: 1px solid transparent;
+  border-radius: 8px;
+}
+.input::-moz-placeholder {
+  font-size: 18px;
+  line-height: 1.4;
+  font-weight: normal;
+  color: #b3b3ba;
+}
+.input:-ms-input-placeholder {
+  font-size: 18px;
+  line-height: 1.4;
+  font-weight: normal;
+  color: #b3b3ba;
+}
+.input::placeholder {
+  font-size: 18px;
+  line-height: 1.4;
+  font-weight: normal;
+  color: #b3b3ba;
+}
+
+.form-question {
+  margin: 0 0 20px 10px;
+  font-size: 14px;
+  line-height: 1.2;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #b3b3ba;
+}
+
+.input-text {
+  margin-bottom: 8px;
+}
+
+.modal-btn {
+  display: flex;
+  justify-content: center;
+}
+
+.modal-button {
+  padding: 17px 70px;
 }
 
 .gradient {
@@ -1870,6 +2002,11 @@ h6 {
   color: #f0145a;
 }
 
+.current {
+  color: #f0145a;
+  border-bottom: solid 2px #f0145a;
+}
+
 .top-navigation-page {
   justify-content: center;
 }
@@ -2167,9 +2304,27 @@ h6 {
   }
 }
 
+.footer-line-servise {
+  background-color: transparent;
+}
+
 .gradient-two-pages {
-  background-image: url(../../img/Cover.jpg);
+  background-image: url(../../img/Cover.jpg), linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643e72 87.46%);
   background-repeat: no-repeat;
+}
+
+.services-info {
+  padding-bottom: 23px;
+}
+@media screen and (min-width: 768px) {
+  .services-info {
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .services-info {
+    padding-bottom: 80px;
+  }
 }
 
 .serviced-icon-pages {
@@ -2179,9 +2334,22 @@ h6 {
 }
 
 .services-info-top {
+  margin: 0 auto;
+  max-width: 1092px;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.services-info-bottom {
+  margin: 0 auto;
+  max-width: 1092px;
+}
+
+.services-info-line {
+  margin-bottom: 20px;
+  height: 4px;
+  background-color: #e6e6f0;
 }
 
 .text-info {
@@ -2191,4 +2359,284 @@ h6 {
 .button-info {
   margin-top: 20px;
   padding: 16px 36px;
+  margin-bottom: 40px;
+}
+
+.services-info-title {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.16;
+  color: #ffffff;
+}
+
+.services-info-list {
+  padding-left: 25px;
+}
+.services-info-list__last {
+  margin-bottom: 0;
+}
+@media screen and (min-width: 768px) {
+  .services-info-list {
+    max-width: 512px;
+    margin-right: 52px;
+  }
+  .services-info-list__last {
+    margin-right: 0;
+  }
+}
+
+.services-info-item {
+  color: #f0145a;
+  margin-bottom: 10px;
+}
+.services-info-item:last-child {
+  margin-bottom: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .info-container {
+    display: flex;
+  }
+}
+
+.title-team {
+  margin-bottom: 20px;
+  text-align: center;
+  max-width: 864px;
+}
+@media screen and (min-width: 768px) {
+  .title-team {
+    margin-bottom: 40px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .title-team {
+    margin-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .title-team {
+    margin-bottom: 80px;
+  }
+}
+
+.team-list {
+  display: grid;
+  gap: 20px;
+  margin-bottom: 40px;
+}
+@media screen and (min-width: 768px) {
+  .team-list {
+    grid-template: repeat(3, 1fr)/repeat(2, 1fr);
+    gap: 40px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .team-list {
+    margin-bottom: 60px;
+    grid-template: repeat(2, 1fr)/repeat(3, 1fr);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .team-item {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    align-items: end;
+  }
+}
+
+.team-item-foto {
+  border-radius: 12px;
+}
+@media screen and (min-width: 768px) {
+  .team-item-foto {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team-list-container {
+    position: relative;
+  }
+}
+
+.team-name {
+  font-size: 18px;
+  line-height: 1.16;
+  color: #323264;
+}
+
+.team-item-link {
+  margin-top: 10px;
+  display: inline-block;
+  display: flex;
+  justify-content: center;
+  width: 32px;
+  height: 32px;
+  font-size: 25px;
+  border-radius: 50%;
+  background-color: #f5f5fa;
+  color: #24a3ff;
+}
+@media screen and (min-width: 768px) {
+  .team-item-link {
+    margin-top: 0;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+  }
+}
+
+.person-container {
+  margin-bottom: 22px;
+}
+@media screen and (min-width: 768px) {
+  .person-container {
+    display: flex;
+    margin-bottom: 62px;
+  }
+}
+
+.person-page {
+  max-width: 413px;
+  border-radius: 12px;
+}
+@media screen and (min-width: 768px) {
+  .person-page {
+    margin-right: 20px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .person-page {
+    margin-right: 41px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .person-description {
+    margin-top: 20px;
+  }
+}
+
+.person-contact {
+  margin-top: 10px;
+}
+@media screen and (min-width: 768px) {
+  .person-contact {
+    display: flex;
+    align-items: center;
+  }
+}
+
+.person-line {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  height: 4px;
+  width: 100%;
+  background-color: #e6e6f0;
+}
+@media screen and (min-width: 768px) {
+  .person-line {
+    margin-bottom: 40px;
+  }
+}
+
+.person-contact-item {
+  margin-right: 26px;
+}
+.person-contact-item:last-child {
+  margin-right: 0;
+}
+
+.person-contacts {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.18;
+  color: #24a3ff;
+}
+
+.person-contact-items {
+  position: relative;
+}
+.person-contact-items::after, .person-contact-items::before {
+  position: absolute;
+  display: inline-block;
+  content: "";
+  top: 50%;
+  width: 6px;
+  height: 6px;
+  transform: translateY(-50%);
+  background-color: #e6e6f0;
+  border-radius: 50%;
+}
+.person-contact-items::after {
+  right: -14px;
+}
+.person-contact-items::before {
+  left: -14px;
+}
+
+.person-text {
+  font-size: 18px;
+  line-height: 1.4;
+  font-weight: normal;
+  color: #000000;
+}
+
+.person-title {
+  font-size: 14px;
+  line-height: 1.2;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #323264;
+}
+
+.contact-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 21px;
+  line-height: 1.4;
+}
+
+.contact-address {
+  margin-top: 10px;
+  color: #323264;
+}
+
+.contact-address-b {
+  font-weight: 500;
+}
+
+.contact-tel {
+  display: inline-block;
+  color: #46466e;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.contact-mail {
+  display: inline-block;
+  margin-bottom: 20px;
+  color: #24a3ff;
+}
+
+.contact-link {
+  max-width: 171px;
+  display: flex;
+  align-items: center;
+}
+
+.contact-link-text {
+  display: inline-block;
+  margin-left: 10px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.3;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #24a3ff;
 }/*# sourceMappingURL=main.css.map */
