--- a/scss/main.scss
+++ b/scss/main.scss
@@ -31,6 +31,7 @@
 @import "./components/header-mobile";
 @import "./components/owl-carousel.min";
 @import "./components/switcher";
+@import "./components/backdrop";
 // page-index
 @import "./index/topbar";
 @import "./index/desctop-menu";
@@ -50,3 +51,8 @@
 // page service
 @import "./service/header-service";
 @import "./service/services-pages";
+// page team
+@import "./team/team-page";
+@import "./team/person-page";
+// page contact
+@import "./contacts";
