--- a/scss/service/_services-pages.scss
+++ b/scss/service/_services-pages.scss
@@ -1,6 +1,15 @@
 .gradient-two-pages {
-  background-image: url(../../img/Cover.jpg);
+  background-image: url(../../img/Cover.jpg), $gradient-supersoft;
   background-repeat: no-repeat;
+}
+.services-info {
+  padding-bottom: 23px;
+  @media screen and (min-width: 768px) {
+    padding-bottom: 60px;
+  }
+  @media screen and (min-width: 1024px) {
+    padding-bottom: 80px;
+  }
 }
 .serviced-icon-pages {
   width: 92px;
@@ -8,11 +17,21 @@
   margin-bottom: 20px;
 }
 .services-info-top {
+  margin: 0 auto;
+  max-width: 1092px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.title-info {
+
+.services-info-bottom {
+  margin: 0 auto;
+  max-width: 1092px;
+}
+.services-info-line {
+  margin-bottom: 20px;
+  height: 4px;
+  background-color: $separator;
 }
 .text-info {
   color: $white;
@@ -20,4 +39,37 @@
 .button-info {
   margin-top: 20px;
   padding: 16px 36px;
+  margin-bottom: 40px;
+}
+.services-info-title {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.16;
+  color: $white;
+}
+.services-info-list {
+  padding-left: 25px;
+
+  &__last {
+    margin-bottom: 0;
+  }
+  @media screen and (min-width: 768px) {
+    max-width: 512px;
+    margin-right: 52px;
+    &__last {
+      margin-right: 0;
+    }
+  }
+}
+.services-info-item {
+  color: $accent;
+  margin-bottom: 10px;
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+.info-container {
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
 }
